laborations/lab2/testsuite/bad/redecl-var-different-type.cc
int main() {
  int x = 0;
  bool x = false;
  return 0;
}
